[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = { version = "1.10.2", features = [] }
itertools = { version = "0.12.0", features = [] }

[package.metadata.docs.rs]
allow-dead-code = true